--- a/app/less/config.less
+++ b/app/less/config.less
@@ -29,13 +29,14 @@
 @bg_color           :#FFFFFF;
 @bg_color_dark      :#030a10;
 @bg_color_light     :#1d252b;
-
 @text_active_color  :#000000;
 @text_normal_color  :#111111;
-
+@text_color_normal: #333333;
 @text_dark_color    :#000000;
 @black_color        :#000000;
 
+@icon_color_default: #999999;
+@icon_color_hover: #000000;
 @border_color       :#DDDDDD;
 
 @font-size-normal: 1.2em;
@@ -117,10 +118,3 @@ body{
     -webkit-transition:all @s ease-in-out;
     -o-transition:all @s ease-in-out;
 }
-
-
-// background: red; /* For browsers that do not support gradients */
-// background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)); /* For Safari 5.1 to 6.0 */
-// background: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)); /* For Opera 11.1 to 12.0 */
-// background: -moz-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)); /* For Firefox 3.6 to 15 */
-// background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)); /* Standard syntax */
