--- a/app/less/config.less
+++ b/app/less/config.less
@@ -10,7 +10,7 @@
 }
 
 @FontStylePrimary   : sans-serif;
-@font_family_topic  : sans-serif;
+@font_family_topic  : 'maledpan';
 
 // http://www.color-hex.com/color/21ce99
 @primary_color      :#2962FF; // Active Color
@@ -30,14 +30,18 @@
 @bg_color_dark      :#030a10;
 @bg_color_light     :#1d252b;
 @text_active_color  :#000000;
-@text_normal_color  :#111111;
+
+// @text_normal_color  :#111111;
+
 @text_color_normal: #333333;
-@text_dark_color    :#000000;
-@black_color        :#000000;
+@text_color_light: #999999;
+@text_color_dark: #000000;
 
 @icon_color_default: #999999;
 @icon_color_hover: #000000;
-@border_color       :#DDDDDD;
+
+@border_color: #DDDDDD;
+@border_color_hover: #BBBBBB;
 
 @font-size-normal: 1.2em;
 @font-size-mini: 0.75em;
