--- a/app/less/style.less
+++ b/app/less/style.less
@@ -72,16 +72,23 @@
 
 			a.button-option {
 				text-decoration: none;
-				padding: 10px;
+				height: 50px;
+				width: 50px;
 				color: @icon_color_default;
 				font-size: @fontsize_normal;
+				background: @border_color;
+				margin-left: 7px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				border-radius: 7px;
 
 				&.first-right {
 					margin-left: auto;
 				}
 
 				&:hover {
-					color: @icon_color_hover;
+					background: @border_color_hover;
 				}
 			}
 		}
@@ -100,28 +107,28 @@
 				margin-bottom: 2.66%;
 				height: 170px;
 				text-decoration: none;
-				border-radius: 10px;
+				border-radius: 7px;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
 				background: #DDDDDD;
 				color: #999999;
-				box-shadow: 0px 3px 7px rgba(0,0,0,0.25);
 
 				&.create-button {
 					background: #FFFFFF;
-					border: 2px dashed #DDDDDD;
+					border: 2px dashed @border_color;
+					color: @border_color;
 					font-size: @fontsize_normal;
 					align-items: center;
 					box-shadow: none;
-					
-					i {
-						font-size: @fontsize_icon;
-						margin-bottom: 5px;
-					}
 
 					p {
 						font-family: @font_family_topic;
+					}
+
+					&:hover {
+						border: 2px dashed @border_color_hover;
+						color: @border_color_hover;
 					}
 				}
 
@@ -151,14 +158,12 @@
 					font-size: @fontsize_topic;
 					font-weight: bold;
 					font-family: @font_family_topic;
-					text-align: center;
 				}
 				.desc {
 					font-size: @fontsize_mini;
 					text-overflow: ellipsis;
 					white-space: nowrap;
 					overflow: hidden;
-					text-align: center;
 				}
 
 				&.disable {
@@ -194,48 +199,8 @@
 				}
 		
 				&.lostconnect {
-					background: #CFD8DC;
-					color: #607D8B;
-				}
-			}
-
-			a.link {
-				width: 23%;
-				padding: 0 3%;
-				box-sizing: border-box;
-				margin-right: 2.66%;
-				margin-bottom: 2.66%;
-				height: 80px;
-				text-decoration: none;
-				background: #EEEEEE;
-				border-radius: 10px;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				color: #999999;
-
-				&:nth-child(4n+0) {
-					margin-right: 0%;
-				}
-
-				&.active {
-					background: @primary_color;
-					color: #FFFFFF;
-				}
-
-				.name {
-					text-overflow: ellipsis;
-					white-space: nowrap;
-					overflow: hidden;
-					font-size: @fontsize_normal;
-					font-weight: bold;
-					font-family: @font_family_topic;
-				}
-				.counter {
-					font-size: @fontsize_mini;
-					text-overflow: ellipsis;
-					white-space: nowrap;
-					overflow: hidden;
+					background: #DDDDDD;
+					color: #999999;
 				}
 			}
 		}
@@ -293,6 +258,7 @@
 		font-family: @font_family_topic;
 		padding-bottom: 10px;
 		margin-bottom: 20px;
+		color: @text_color_normal;
 	}
 
 	.form-items {
@@ -306,11 +272,12 @@
 
 		label {
 			font-size: @fontsize_mini;
-			color: #666666;
+			color: @text_color_normal;
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
 			margin-bottom: 6px;
+			font-weight: bold;
 
 			.label-button {
 					color: @primary_color;
@@ -334,20 +301,28 @@
 			float: left;
 			display: block;
 			font-size: @fontsize_normal;
-			padding: 12px;
-			background: #EEEEEE;
-			color: #333333;
+			padding: 14px;
+			background: #FAFAFA;
+			color: @text_color_normal;
 			margin: 0%;
 			border-radius: 5px;
 			box-sizing: border-box;
-			border: 2px solid #DDDDDD;
+			border: 2px solid @border_color;
 			resize: none;
+			
+			&.-loading {
+				background: transparent;
+				color: @primary_color;
+			}
 
-		&.-loading{
-			background: transparent;
-			color: @primary_color;
+			&:hover {
+				cursor: pointer;
+			}
+
+			&:focus {
+				border: 2px solid @primary_color;
+			}
 		}
-	}
 
 		.input-textarea {
 			height: 100px;
@@ -359,14 +334,14 @@
 			display: block;
 			font-size: @fontsize_normal;
 			border: 0px;
-			padding: 12px;
+			padding: 14px;
 			margin: 0%;
 			margin-top: 15px;
 			border-radius: 5px;
 			background: @primary_color;
 			color: @bg_color;
-			box-shadow: 1px 3px 5px rgba(0,0,0,0.25);
 			font-size: @fontsize_normal;
+			font-weight: bold;
 
 			i {
 				margin-left: 10px;
@@ -386,8 +361,7 @@
 		}
 
 		.note {
-			color: #999999;
-			font-family: @font_family_topic;
+			color: @text_color_normal;
 			font-size: @fontsize_mini;
 			margin-top: 6px;
 
@@ -414,7 +388,7 @@
 		.lists {
 			display: flex;
 			flex-direction: column;
-			border: 2px solid #DDDDDD;
+			border: 2px solid @border_color;
 			border-radius: 5px;
 			font-size: 1.2em;
 			margin-bottom: 10px;
@@ -422,7 +396,7 @@
 			.list-items {
 				display: flex;
 				flex-direction: row;
-				border-bottom: 1px solid #EEEEEE;
+				border-bottom: 1px solid @border_color;
 
 				&:last-child {
 					border-bottom: 0;
@@ -464,9 +438,14 @@
 		i {
 			font-size: @fontsize_normal * 1.75;
 			padding: 0;
+			color: @border_color;
 
 			&.fa-toggle-on {
 				color: @primary_color;
+			}
+
+			&:hover {
+				cursor: pointer;
 			}
 		}
 	}
@@ -492,9 +471,11 @@
 			h1 {
 				font-size: @fontsize_topic;
 				font-family: @font_family_topic;
+				color: @text_color_normal;
 			}
 			p {
 				font-size: @fontsize_normal;
+				color: @text_color_light;
 			}
 		}
 
@@ -503,6 +484,7 @@
 			font-size: @fontsize_topic * 2.2;
 			line-height: 1.2em;
 			font-weight: bold;
+			color: @text_color_normal;
 		}
 	}
 
@@ -513,7 +495,6 @@
 		margin-bottom: 25px;
 
 		.box {
-			text-align: center;
 			flex-grow: 1;
 			padding: 1%;
 
@@ -521,48 +502,33 @@
 				font-family: @font_family_topic;
 				font-size: @fontsize_topic;
 				line-height: 1.2em;
+				color: @text_color_normal;
 			}
 			p {
 				font-size: @fontsize_mini;
+				color: @text_color_light;
 			}
 
 			&.-highest{
-				.v{ color: @text_normal_color; }
+				.v{ color: @text_color_normal; }
 				.over{ color: @second_color; }
 			}
 			&.-lowest{
-				.v{ color: @text_normal_color; }
+				.v{ color: @text_color_normal; }
 				.over{ color: @second_color; }
 			}
 		}
 	}
-
-	.info {
-		font-size: @fontsize_mini;
-		display: flex;
-		flex-direction: row;
-
-		a {
-			text-decoration: none;
-			margin-right: 15px;
-			color: #666666;
-
-			i {
-				margin-right: 5px;
-				color: @primary_color;
-			}
-		}
-	}
-
+	
 	.graph{
 		width: 100%;
 		margin-top: 5%;
 		display: flex;
-		height: 250px;
+		height: 300px;
 
 		canvas{
 			width: 100%;
-			height: 250px;
+			height: 300px;
 		}
 	}
 }
@@ -606,8 +572,8 @@
 			.icon{
 				width: 10%;
 				text-align: center;
-				i.fa-caret-down{ color: @primary_color; }
-				i.fa-caret-up{ color: @second_color; }
+				i.fa-arrow-down { color: @primary_color; }
+				i.fa-arrow-up { color: @second_color; }
 			}
 			.temp {
 				width: 25%;
@@ -622,7 +588,7 @@
 			float: left;
 			display: block;
 			text-align: center;
-			color: @text_normal_color;
+			color: @text_color_normal;
 			font-size: 0.9em;
 		}
 
@@ -632,7 +598,7 @@
 			float: left;
 			display: block;
 			text-align: center;
-			color: @text_normal_color;
+			color: @text_color_light;
 			font-size: 0.9em;
 		}
 	}
@@ -746,7 +712,7 @@
 
 			&.btn-not-Accept{
 				background: transparent;
-				color: @text_normal_color;
+				color: @text_color_light;
 			}
 		}
 	}
