--- a/app/less/style.less
+++ b/app/less/style.less
@@ -34,6 +34,25 @@
 		}
 	}
 
+	a.btn-text {
+		font-size: 1em;
+		height: 40px;
+		color: @primary_color;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-decoration: none;
+		background: #E3F2FD;
+		box-sizing: border-box;
+		padding: 0 20px;
+		margin: 20px 0;
+		border-radius: 20px;
+
+		&:hover {
+			color: @icon_color_hover;
+		}
+	}
+
 	a.logo-icon {
 		display: flex;
 		justify-content: center;
@@ -74,21 +93,22 @@
 				text-decoration: none;
 				height: 50px;
 				width: 50px;
-				color: @icon_color_default;
+				color: @primary_color;
 				font-size: @fontsize_normal;
-				background: @border_color;
+				background: #E3F2FD;
 				margin-left: 7px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				border-radius: 7px;
+				border-radius: 50%;
 
 				&.first-right {
 					margin-left: auto;
 				}
 
 				&:hover {
-					background: @border_color_hover;
+					background: @primary_color;
+					color: #FFFFFF;
 				}
 			}
 		}
@@ -174,10 +194,10 @@
 
 				&.active {
 					background: #2962FF;
-					color: #FFFFFF;
+					color: #90CAF9;
 
-					.desc , .status-icon {
-						color: #90CAF9;
+					.temp {
+						color: #FFFFFF;
 					}
 				}
 				
@@ -232,6 +252,10 @@
 			text-align: center;
 
 			a {
+				background: #E3F2FD;
+				padding: 3px 6px;
+				border-radius: 5px;
+				margin-left: 3px;
 				color: @primary_color;
 				text-decoration: none;
 			}
@@ -256,15 +280,15 @@
 		font-size: @fontsize_topic;
 		border-bottom: 2px solid @border_color;
 		font-family: @font_family_topic;
-		padding-bottom: 10px;
-		margin-bottom: 20px;
+		padding-bottom: 15px;
+		margin-bottom: 30px;
 		color: @text_color_normal;
 	}
 
 	.form-items {
 		display: flex;
 		flex-direction: column;
-		margin-bottom: 15px;
+		margin-bottom: 30px;
 
 		&.hidden {
 			display: none;
@@ -276,7 +300,7 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			margin-bottom: 6px;
+			margin-bottom: 10px;
 			font-weight: bold;
 
 			.label-button {
@@ -303,7 +327,7 @@
 			font-size: @fontsize_normal;
 			padding: 14px;
 			background: #FAFAFA;
-			color: @text_color_normal;
+			color: @primary_color;
 			margin: 0%;
 			border-radius: 5px;
 			box-sizing: border-box;
@@ -321,6 +345,11 @@
 
 			&:focus {
 				border: 2px solid @primary_color;
+			}
+
+			&:disabled {
+				background: @border_color;
+				color: @primary_color;
 			}
 		}
 
@@ -363,10 +392,20 @@
 		.note {
 			color: @text_color_normal;
 			font-size: @fontsize_mini;
-			margin-top: 6px;
+			margin-top: 10px;
 
 			a {
 				color: @primary_color;
+				background: #E3F2FD;
+				text-decoration: none;
+				padding: 3px 6px;
+				border-radius: 5px;
+				margin-left: 3px;
+
+				&:hover {
+					text-decoration: underline;
+				}
+
 				i {
 					margin-left: 5px;
 				}
@@ -507,6 +546,10 @@
 			p {
 				font-size: @fontsize_mini;
 				color: @text_color_light;
+
+				i {
+					margin-right: 10px;
+				}
 			}
 
 			&.-highest{
