--- a/app/less/style.less
+++ b/app/less/style.less
@@ -37,19 +37,20 @@
 	a.btn-text {
 		font-size: 1em;
 		height: 40px;
-		color: @primary_color;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		text-decoration: none;
-		background: #E3F2FD;
+		background: @primary_color;
+		color: #FFFFFF;
 		box-sizing: border-box;
 		padding: 0 20px;
 		margin: 20px 0;
 		border-radius: 20px;
+		margin-right: 20px;
 
 		&:hover {
-			color: @icon_color_hover;
+			cursor: pointer;
 		}
 	}
 
