--- a/app/css/style.css
+++ b/app/css/style.css
@@ -618,7 +618,7 @@ body {
   cursor: pointer;
 }
 .device-info {
-  width: 37%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -686,21 +686,21 @@ body {
 }
 .device-info .graph {
   width: 100%;
-  margin-top: 5%;
+  margin-top: 50px;
   display: flex;
-  height: 300px;
+  height: 250px;
 }
 .device-info .graph canvas {
   width: 100%;
-  height: 300px;
+  height: 250px;
 }
 .device-history {
-  width: 30%;
+  width: 25%;
   margin: 100px 0;
-  margin-left: 50%;
+  margin-left: 55%;
   display: flex;
   box-sizing: border-box;
-  padding-left: 10%;
+  padding-left: 2%;
 }
 .device-history .history {
   width: 100%;
@@ -745,7 +745,6 @@ body {
 .device-history .history .logitems .temp {
   width: 25%;
   text-align: right;
-  color: #000000;
 }
 .device-history .history .loading {
   width: 100%;
